PROJECT(LIMONP)

cmake_minimum_required(VERSION 2.6)

if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set (CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "default install path" FORCE )
endif()

ADD_DEFINITIONS(-O3 -Wall)
ADD_SUBDIRECTORY(limonp)
ADD_SUBDIRECTORY(test)

ENABLE_TESTING()
ADD_TEST(NAME testrun COMMAND test.run)
