SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_EXECUTABLE(demo demo.cpp)
ADD_EXECUTABLE(thread_pool_demo thread_pool_demo.cpp)
TARGET_LINK_LIBRARIES(thread_pool_demo pthread)

SET(GTEST_ROOT_DIR googletest)
INCLUDE_DIRECTORIES(${GTEST_ROOT_DIR} ${GTEST_ROOT_DIR}/include)
ADD_DEFINITIONS(-DGTEST_USE_OWN_TR1_TUPLE=1)
ADD_LIBRARY(gtest STATIC ${GTEST_ROOT_DIR}/src/gtest-all.cc)
TARGET_LINK_LIBRARIES(gtest pthread)

ADD_SUBDIRECTORY(unittest)
